clusters/building-blocks/media/apps/calibre-web-automated/app/calibre-wa-deploy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: calibre-wa
  name: calibre-wa
  namespace: media
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: calibre-wa
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calibre-wa
    spec:
      # -------- Nice to have, but container fails to start
      # watch for this issue: https://github.com/crocodilestick/Calibre-Web-Automated/issues/167
      # securityContext:
      # runAsNonRoot: false
      # runAsUser: 1000
      # runAsGroup: 1000
      # fsGroup: 1000
      # fsGroupChangePolicy: OnRootMismatch
      # seccompProfile:
      #   type: RuntimeDefault
      securityContext:
        fsGroup: 3004
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: main
          image: crocodilestick/calibre-web-automated:V3.0.4
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 8083
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - containerPort: 8083
              name: main
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 8083
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 100Mi
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /
              port: 8083
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2
          volumeMounts:
            - mountPath: /config
              name: calibre-wa-config
            - mountPath: /calibre-library
              name: calibre-library
            - mountPath: /cwa-book-ingest
              name: calibre-wa-book-ingest
              # securityContext:
              #   allowPrivilegeEscalation: false
              # capabilities:
              #   drop:
              #     - ALL
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: calibre-wa-config
          persistentVolumeClaim:
            claimName: calibre-wa-config-pvc
        - name: calibre-library
          persistentVolumeClaim:
            claimName: pvc-nfs-books
        - name: calibre-wa-book-ingest
          persistentVolumeClaim:
            claimName: pvc-nfs-books-ingest
