clusters/building-blocks/media/apps/calibre-web-automated/app/calibre-wa-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-wa
  namespace: media
  labels:
    app.kubernetes.io/name: calibre-wa
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: calibre-wa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
