clusters/building-blocks/media/apps/calibre-web-automated/app/calibre-wa-ingressroute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calibre-wa
  namespace: media
  labels:
    app: calibre-wa
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`books.${DOMAIN_NAME}`)
      priority: 10
      services:
        - kind: Service
          name: calibre-wa
          namespace: media
          passHostHeader: true
          port: 80
          scheme: http
